--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <img src="./assets/img/img_6.svg" alt="">
                 </div>
             </div>
-            <div class="htu_content">
+            <div class="htu_content rev">
                 <div class="htu_img_2">
                     <img src="./assets/img/img_7.svg" alt="">
                 </div>
